Correction de merge